-
Bug
-
Resolution: Fixed
-
Minor
-
Upstream, Lustre 2.18.0, Lustre 2.15.9
-
3
-
9223372036854775807
In `mdc_device_alloc()`, when `class_name2obd()` fails to find the OBD device, the function returns an error without freeing the `osc_device` structure that was allocated earlier. This causes a memory leak on the client side during failed device initialization attempts.