LU-20453 mdc: fix memory leak in mdc_device_alloc()

When class_name2obd() fails to find the OBD device, the function
returns an error without freeing the osc_device structure allocated
earlier. This causes a memory leak on device initialization failure.

Add cleanup of the cl_device and osc_device before returning error,
matching the cleanup pattern already used when mdc_setup() fails.

Fixes: 68ff85b8858e ("LU-3285 mdc: add cl_device to the MDC")
Signed-off-by: Vandana Rungta <vrungta@amazon.com>
Change-Id: I34acfd37629f3869df253629eeead61743f2fdc9
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/67111
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Timothy Day <timday@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>